examples/pos/lambdas/annotated.effekt
effect Exc(): Unit

def main() =
  try {
    def closure(): Unit = do Exc()
    val g: () => Unit / Exc at exc = box { closure() }
    g()
  } with exc: Exc {
    println("exception!");
    resume(())
  }
